# QFCL

./: CMakeLists.txt  README.md  README.txt
WinNTL-5_5_2-CMake/: CMakeLists.txt  README-CMake.txt
WinNTL-5_5_2-CMake/Modules/: FindNTL.cmake
WinNTL-5_5_2-CMake/doc/: Thumbs.db
WinNTL-5_5_2-CMake/tests/: CMakeLists.txt  copy_resources.bat
boost_extensions/: README.txt
boost_extensions/Modules/: FindBoost_Extensions.cmake
boost_extensions/boost/random/: aes.hpp  ars.hpp  counter_based_urng.hpp  philox.hpp  threefry.hpp
boost_extensions/boost/random/detail/: aes_common.hpp  aes_config.hpp  aes_hasaesni.hpp  aes_impl.hpp  mulhilo.hpp
boost_extensions/libs/random/test/: Makefile  ex1.cpp  random_speed.cpp  test_aes.cpp  test_ars.cpp  test_engine.ipp  test_mulhilo.cpp  test_prf.ipp
boost_extensions/prf_boost/: README  TODO
doc/: project_random_chapter_distributions.tex  project_random_chapter_overview.tex  project_random_chapters.tex  project_random_title_page.tex
examples/: CMakeLists.txt  linear_generator_example.cpp  parallel_monte_carlo.cpp  skip_list_example.cpp
qfcl/: defines.hpp  types.hpp
qfcl/finance/: MC_pricer.hpp
qfcl/finance/instruments/: instrument_base.hpp
qfcl/math/bits/: copy_bits.hpp
qfcl/math/simple/: functions.hpp
qfcl/mc1/: FDMVisitor.cpp  FDMVisitor_named.hpp  MCAntitheticVariateWITHOUT.cc  MCMediator.hpp  NormalGenerator.cpp  Range.cpp
qfcl/random/distribution/: gbm_at_fixed_time.hpp  gbm_npv_vanilla_put.hpp  normal_box_muller_polar.hpp  uniform_0in_1in.hpp
qfcl/random/engine/: engine.hpp  linear_generator.hpp  matrix.cpp  matrix.hpp
qfcl/utility/: decorator.hpp  for_each.hpp  io.hpp  names.hpp  type_traits.hpp
qfcl_0_4/: CMakeLists.txt  README.txt
qfcl_0_4/doc/: CMakeLists.txt  Doxyfile.in  project_random.tex  project_random_chapter_engines.tex  project_random_chapter_tutorial.tex  project_random_distribution_gbm_npv_vanilla_call.tex  project_random_distribution_normal.tex  project_random_distribution_uniform.tex
qfcl_0_4/examples/: CMakeLists.txt  bench_normal.cpp  linear_generator_example.cpp  parallel_PRNG_example.cpp
qfcl_0_4/qfcl/: algorithm.hpp
qfcl_0_4/qfcl/finance/instruments/: barrier_option.hpp
qfcl_0_4/qfcl/mc1/: FDMVisitor.hpp  MCAntitheticVariate.cpp  MCPostProcess.hpp  Mesher.cpp  Mesher.hpp  NormalGenerator.hpp  OptionData.hpp  Range.hpp  Sde.cpp  Sde.hpp  SdeOneFactor.hpp  SdeVisitor.hpp
qfcl_0_4/qfcl/random/: variate_generator.hpp
qfcl_0_4/qfcl/random/distribution/: gbm_npv_vanilla_call.hpp  normal_box_muller.hpp  normal_inversion.hpp  uniform_0ex_1ex.hpp  uniform_0ex_1in.hpp  uniform_0in_1ex.hpp
qfcl_0_4/qfcl/random/engine/: counting.hpp  cpp_rand.hpp  linear_generator.hpp  matrix.cpp  matrix.hpp  mersenne_twister.hpp  named_adapter.hpp  numberline.hpp  reverse_adapter.hpp  twisted_generalized_feedback_shift_register.hpp
qfcl_0_4/qfcl/statistics/: descriptive.hpp
qfcl_0_4/qfcl/utility/: adapters.hpp  comma_separated_number.hpp  for_each.hpp  for_each_fwd.hpp  names.hpp  tmp.hpp  type_selection.hpp
qfcl_0_4/test/: CMakeLists.txt  delete.bat  engine_profiler.cpp  engine_speed.cpp  linear_generator.cpp  linear_generator_discard_speed.cpp  mersenne_twister.cpp  normal.cpp  test_generator.ipp  twisted_generalized_feedback_shift_register.cpp  uniform_continuous.cpp  uniform_discrete.cpp
qfcl_0_4/test/utility/: cpu_timer.hpp
test/: CMakeLists.txt  TestMC.cpp  engine_common.ipp  engine_speed.cpp  engine_speed_hard_coded.cpp  matrix_power_speed.cpp
